--- a/UserFiles/Plugins/FGen/FgenPluginBaseClass/none.ini
+++ b/UserFiles/Plugins/FGen/FgenPluginBaseClass/none.ini
@@ -7,6 +7,9 @@ Type = None
 [RefClk]
 RefClk = "0"
 
+[Script]
+Script.<size(s)> = "0"
+
 [Timebase]
 source = "/PXI1Slot6/PXI_Trig1"
 rate = "18000000.000000"
@@ -26,7 +29,7 @@ Channel 0.Connected = "FALSE"
 Channel 0.Mode (Function) = "Function"
 
 [FunctionIniFilePAth]
-Path = "\..\..\..\..\..\MemberClasses\StandardFunction\3Phase_Sine_60f0.ini
+Path = "..\..\FunctionBase\FunctionBase.ini
 
 [Triggers]
 Count = "1"
