--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -27,7 +27,7 @@ RefClkSource = "PXI_Trig0"
 TimeRefType = "GPS"
 
 [Triggers]
-.<size(s)> = "3"
+.<size(s)> = "4"
 0.Name = "PPS_Trigger"
 0.DestTerm = "PXI_Trig3"
 0.SrcTerm = "PFI1"
@@ -55,6 +55,15 @@ TimeRefType = "GPS"
 2.Initiated = "FALSE"
 2.Type = "Connect"
 2.TrigTime = "FALSE"
+3.Name = "Timed_1"
+3.DestTerm = "/PXI1Slot7/PFI1"
+3.SrcTerm = ""
+3.SyncClk = ""
+3.Edge = "0"
+3.Invert? = "0"
+3.Initiated = "FALSE"
+3.Type = "Timed"
+3.TrigTime = "FALSE"
 
 [Clocks]
 .<size(s)> = "5"
@@ -87,7 +96,7 @@ TimeRefType = "GPS"
 2.Delay = "0.000000"
 3.Name = "1_PPS"
 3.RefClk = ""
-3.ClkTerminal = "/PXI1Slot7/PFI1"
+3.ClkTerminal = "/PXI1Slot7/PFI0"
 3.Frequency = "1.000000"
 3.DutyCycle = "0.500000"
 3.ClkType = "FreqClk"
